# scrybox

./: Cargo.toml  README.md  config.toml  scrybox_db_schema.dia
src/: collection.rs  config.rs  db.rs  default_config.toml  lib.rs  scryfall_data.rs
src/sql/: setup.sql
